more clear backend for linear and cubic fourier slice. remove interpolation_order argument

--- a/docs/examples/compute-potential.ipynb
+++ b/docs/examples/compute-potential.ipynb
@@ -200,7 +200,7 @@
     "def compute_projection(potential):\n",
     "    \"\"\"Compute a projection of a voxel-based potential.\"\"\"\n",
     "    # ... initialize the integration method for the potential\n",
-    "    potential_integrator = cxs.FourierSliceExtraction(interpolation_order=1)\n",
+    "    potential_integrator = cxs.FourierSliceExtraction()\n",
     "    # ... and the configuration of the imaging instrument\n",
     "    instrument_config = cxs.InstrumentConfig(\n",
     "        shape=potential.shape[0:2],\n",
