--- a/docs/examples/simulate-image.ipynb
+++ b/docs/examples/simulate-image.ipynb
@@ -102,12 +102,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Initialize the scattering theory. First, instantiate fourier slice extraction\n",
-    "potential_integrator = cxs.FourierSliceExtraction(interpolation_order=1)\n",
+    "potential_integrator = cxs.FourierSliceExtraction()\n",
     "# ... next, the contrast transfer theory\n",
     "ctf = cxs.CTF(\n",
     "    defocus_in_angstroms=10000.0,\n",
