--- a/docs/examples/simulate-relion-dataset.ipynb
+++ b/docs/examples/simulate-relion-dataset.ipynb
@@ -103,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -154,7 +154,7 @@
     "\n",
     "    # ... build the CTF\n",
     "    transfer_theory = cxs.ContrastTransferTheory(\n",
-    "        ctf=cxs.ContrastTransferFunction(\n",
+    "        ctf=cxs.CTF(\n",
     "            defocus_in_angstroms=defocus_in_angstroms,\n",
     "            astigmatism_in_angstroms=astigmatism_in_angstroms,\n",
     "            astigmatism_angle=astigmatism_angle,\n",
@@ -331,7 +331,7 @@
     "    real_voxel_grid, voxel_size, pad_scale=2\n",
     ")\n",
     "\n",
-    "potential_integrator = cxs.FourierSliceExtraction(interpolation_order=1)"
+    "potential_integrator = cxs.FourierSliceExtraction()"
    ]
   },
   {
