--- a/docs/examples/cross-correlation-search.ipynb
+++ b/docs/examples/cross-correlation-search.ipynb
@@ -189,7 +189,7 @@
     "structural_ensemble = cxs.SingleStructureEnsemble(potential=potential, pose=pose_grid)\n",
     "# ... now the scattering theory\n",
     "transfer_theory = particle_stack.parameters.transfer_theory\n",
-    "potential_integrator = cxs.FourierSliceExtraction(interpolation_order=1)\n",
+    "potential_integrator = cxs.FourierSliceExtraction()\n",
     "scattering_theory = cxs.WeakPhaseScatteringTheory(\n",
     "    structural_ensemble,\n",
     "    potential_integrator,\n",
@@ -586,7 +586,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "cryojax-env",
+   "display_name": "cryojax",
    "language": "python",
    "name": "python3"
   },
@@ -600,7 +600,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.7"
+   "version": "3.10.13"
   }
  },
  "nbformat": 4,
