--- a/docs/examples/simulate-micrograph.ipynb
+++ b/docs/examples/simulate-micrograph.ipynb
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -74,7 +74,7 @@
     "    real_voxel_grid, voxel_size, pad_scale=2\n",
     ")\n",
     "# ... now the projection method\n",
-    "potential_integrator = cxs.FourierSliceExtraction(interpolation_order=1)\n",
+    "potential_integrator = cxs.FourierSliceExtraction()\n",
     "# ... and the contrast transfer theory\n",
     "transfer_theory = cxs.ContrastTransferTheory(\n",
     "    ctf=cxs.AberratedAstigmaticCTF(\n",
@@ -315,7 +315,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "cryojax-env",
+   "display_name": "cryojax",
    "language": "python",
    "name": "python3"
   },
@@ -329,7 +329,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.7"
+   "version": "3.10.13"
   }
  },
  "nbformat": 4,
