Updating simulated image stack and atomic potentials

--- a/docs/examples/simulating-and-reweighting-ensembles.ipynb
+++ b/docs/examples/simulating-and-reweighting-ensembles.ipynb
@@ -39,7 +39,16 @@
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/mnt/home/levans/venvs/cryojax/lib/python3.10/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
+     ]
+    }
+   ],
    "source": [
     "# CryoJAX imports\n",
     "\n",
@@ -79,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -124,7 +133,6 @@
     "    # now generate your non-random values\n",
     "    spherical_aberration_in_mm = 2.7\n",
     "    amplitude_contrast_ratio = 0.1\n",
-    "    b_factor = 0.0\n",
     "    ctf_scale_factor = 1.0\n",
     "\n",
     "    # ... build the CTF\n",
@@ -136,10 +144,8 @@
     "            spherical_aberration_in_mm=spherical_aberration_in_mm,\n",
     "        ),\n",
     "        amplitude_contrast_ratio=amplitude_contrast_ratio,\n",
-    "        phase_shift=phase_shift,\n",
-    "        envelope=op.FourierGaussian(b_factor=b_factor, amplitude=ctf_scale_factor),\n",
+    "        phase_shift=phase_shift\n",
     "    )\n",
-    "\n",
     "    relion_particle_parameters = RelionParticleParameters(\n",
     "        instrument_config=instrument_config,\n",
     "        pose=pose,\n",
@@ -205,16 +211,17 @@
     "parameter_dataset = RelionParticleParameterDataset(\n",
     "    path_to_starfile=\"./outputs/heterogeneous_relion_dataset.star\",  # starfile we created\n",
     "    path_to_relion_project=path_to_mrc_files,  # here is where the mrcs will be saved\n",
-    "    loads_envelope=True,\n",
-    ")"
+    ")\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
+    "from cryojax.constants import get_tabulated_scattering_factor_parameters\n",
+    "\n",
     "filenames = [\"./data/groel_chainA.pdb\", \"./data/groel_chainA_holo.pdb\"]\n",
     "\n",
     "box_size = parameter_dataset[0].instrument_config.shape[0]\n",
@@ -223,11 +230,18 @@
     "voxel_size = parameter_dataset[0].instrument_config.pixel_size\n",
     "for filename in filenames:\n",
     "    # Load the atomic structure and transform into a potential\n",
-    "    atom_positions, atom_identities, b_factors = read_atoms_from_pdb(\n",
+    "    atom_positions, atom_identities, bfactors = read_atoms_from_pdb(\n",
     "        filename, center=True, select=\"not element H\", loads_b_factors=True\n",
     "    )\n",
-    "    atomic_potential = cxs.PengAtomicPotential(atom_positions, atom_identities, b_factors)\n",
-    "\n",
+    "    scattering_factor_parameters = get_tabulated_scattering_factor_parameters(\n",
+    "        atom_identities \n",
+    "    )\n",
+    "    atomic_potential = cxs.PengAtomicPotential(\n",
+    "        atom_positions,\n",
+    "        scattering_factor_a=scattering_factor_parameters[\"a\"],\n",
+    "        scattering_factor_b=scattering_factor_parameters[\"b\"],\n",
+    "        b_factors=bfactors\n",
+    "    )\n",
     "    # Convert to a real voxel grid\n",
     "    # This step is optional, you could use the atomic potential directly!\n",
     "    real_voxel_grid = atomic_potential.as_real_voxel_grid(\n",
@@ -247,14 +261,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "from typing import Any, Tuple\n",
-    "\n",
     "from jaxtyping import Array, Float\n",
-    "\n",
     "from cryojax.inference import distributions as dist\n",
     "\n",
     "\n",
@@ -307,7 +319,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -320,8 +332,6 @@
     "    distribution = build_distribution_from_relion_particle_parameters(\n",
     "        key, particle_parameters, args\n",
     "    )\n",
-    "\n",
-    "    distribution\n",
     "    return distribution.compute_signal()\n",
     "\n",
     "\n",
@@ -397,15 +407,16 @@
    "outputs": [],
    "source": [
     "def compute_image_with_noise(\n",
-    "    key: PRNGKeyArray,\n",
-    "    relion_particle_parameters: RelionParticleParameters,\n",
-    "    args: Any,\n",
+    "    particle_parameters: RelionParticleParameters,\n",
+    "    constant_args,\n",
+    "    per_particle_args,\n",
     "):\n",
+    "    key = per_particle_args \n",
     "    key_noise, key_structure = jax.random.split(key)\n",
     "    distribution = build_distribution_from_relion_particle_parameters(\n",
-    "        key_structure, relion_particle_parameters, args\n",
+    "        key_structure, particle_parameters, constant_args\n",
     "    )\n",
-    "    return distribution.sample(key_noise)"
+    "    return distribution.sample(key_noise)\n"
    ]
   },
   {
@@ -418,15 +429,18 @@
     "noise_variance = signal_variance / snr\n",
     "\n",
     "ensemble_weights = jnp.array([0.7, 0.3])\n",
-    "args = (potentials, potential_integrator, ensemble_weights, noise_variance)\n",
+    "constant_args = (potentials, potential_integrator, ensemble_weights, noise_variance)\n",
+    "\n",
+    "# Generate RNG keys for per-image noise\n",
+    "keys = jax.random.split(jax.random.PRNGKey(0), number_of_images)\n",
     "\n",
     "write_simulated_image_stack_from_starfile(\n",
     "    param_dataset=parameter_dataset,\n",
-    "    compute_image=compute_image_with_noise,\n",
-    "    args=args,\n",
+    "    compute_image_fn=compute_image_with_noise,\n",
+    "    constant_args=constant_args,\n",
+    "    per_particle_args=keys,\n",
     "    is_jittable=True,\n",
     "    batch_size_per_mrc=10,\n",
-    "    seed=0,\n",
     "    overwrite=True,\n",
     "    compression=None,\n",
     ")"
@@ -477,7 +491,9 @@
    "source": [
     "## Setting up a dataloader\n",
     "\n",
-    "Normally, you'll have thousands of images, so loading them all into memory at once is not a good idea. CryoJAX is very flexible, and allows us to use external dataloaders. Here I will use the dataloader implemented in: https://github.com/BirkhoffG/jax-dataloader"
+    "Normally, you'll have thousands of images, so loading them all into memory at once is not a good idea. CryoJAX is very flexible, and allows us to use external dataloaders. Here I will use the dataloader implemented in: https://github.com/BirkhoffG/jax-dataloader\n",
+    "\n",
+    "*You will need to install the `jax_dataloader` library above to continue with the rest of the tutorial.*"
    ]
   },
   {
@@ -617,7 +633,7 @@
     {
      "data": {
       "text/plain": [
-       "(Array(35, dtype=int32), Array(65, dtype=int32))"
+       "(Array(27, dtype=int32), Array(73, dtype=int32))"
       ]
      },
      "execution_count": 21,
@@ -798,14 +814,13 @@
     "@eqx.filter_jit\n",
     "@partial(eqx.filter_vmap, in_axes=(0, None, None))\n",
     "def compute_likelihood_build_potential(atom_positions, particle_stack, args):\n",
-    "    atom_identities, b_factors, parameter_table, variance = args\n",
+    "    b_factors, parameter_table, variance = args\n",
     "    atom_potential = cxs.PengAtomicPotential(\n",
     "        atom_positions,\n",
-    "        atom_identities,\n",
-    "        b_factors,\n",
-    "        scattering_factor_parameter_table=parameter_table,\n",
+    "        scattering_factor_a=parameter_table[\"a\"],\n",
+    "        scattering_factor_b=parameter_table[\"b\"],\n",
+    "        b_factors=b_factors,\n",
     "    )\n",
-    "\n",
     "    return compute_likelihood_atomic(atom_potential, particle_stack, variance)\n",
     "\n",
     "\n",
@@ -863,7 +878,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We need to load the parameter table for the Peng Atomic Potential, otherwise generating it is not jittable (this pre-loads the atomic scattering factors)"
+    "As with earlier, we need to load the parameter table for the Peng Atomic Potential, otherwise generating it is not jittable (this pre-loads the atomic scattering factors)"
    ]
   },
   {
@@ -872,8 +887,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from cryojax.constants import get_tabulated_scattering_factor_parameters\n",
-    "\n",
     "\n",
     "parameter_table = get_tabulated_scattering_factor_parameters(atom_identities)"
    ]
@@ -884,7 +897,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "args = (atom_identities, b_factors, parameter_table, noise_variance)\n",
+    "args = (b_factors, parameter_table, noise_variance)\n",
     "\n",
     "likelihood_matrix_atoms = compute_likelihood_matrix_from_atoms(\n",
     "    atom_positions, dataloader, args\n",
@@ -899,7 +912,7 @@
     {
      "data": {
       "text/plain": [
-       "(Array(35, dtype=int32), Array(65, dtype=int32))"
+       "(Array(27, dtype=int32), Array(73, dtype=int32))"
       ]
      },
      "execution_count": 29,
@@ -917,7 +930,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "cryojax-env",
+   "display_name": "cryojax",
    "language": "python",
    "name": "python3"
   },
@@ -931,7 +944,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.2"
+   "version": "3.10.13"
   }
  },
  "nbformat": 4,
