updated fourier envelope

--- a/docs/examples/simulating-and-reweighting-ensembles.ipynb
+++ b/docs/examples/simulating-and-reweighting-ensembles.ipynb
@@ -253,7 +253,7 @@
     "    potentials.append(potential)\n",
     "\n",
     "potentials = tuple(potentials)\n",
-    "potential_integrator = cxs.FourierSliceExtraction(interpolation_order=1)\n",
+    "potential_integrator = cxs.FourierSliceExtraction()\n",
     "\n",
     "# Use this if using an atomic potential\n",
     "# potential_integrator = cxs.GaussianMixtureProjection()"
