--- a/docs/examples/simulating-and-reweighting-ensembles.ipynb
+++ b/docs/examples/simulating-and-reweighting-ensembles.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -60,7 +60,6 @@
     "    write_simulated_image_stack_from_starfile,\n",
     "    write_starfile_with_particle_parameters,\n",
     ")\n",
-    "from cryojax.image import operators as op\n",
     "from cryojax.io import read_atoms_from_pdb\n",
     "from cryojax.rotations import SO3"
    ]
@@ -88,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -133,7 +132,6 @@
     "    # now generate your non-random values\n",
     "    spherical_aberration_in_mm = 2.7\n",
     "    amplitude_contrast_ratio = 0.1\n",
-    "    ctf_scale_factor = 1.0\n",
     "\n",
     "    # ... build the CTF\n",
     "    transfer_theory = cxs.ContrastTransferTheory(\n",
@@ -144,7 +142,7 @@
     "            spherical_aberration_in_mm=spherical_aberration_in_mm,\n",
     "        ),\n",
     "        amplitude_contrast_ratio=amplitude_contrast_ratio,\n",
-    "        phase_shift=phase_shift\n",
+    "        phase_shift=phase_shift,\n",
     "    )\n",
     "    relion_particle_parameters = RelionParticleParameters(\n",
     "        instrument_config=instrument_config,\n",
@@ -156,7 +154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -170,7 +168,7 @@
     "\n",
     "# Generate RNG keys\n",
     "number_of_images = 100\n",
-    "keys = jax.random.split(jax.random.PRNGKey(0), number_of_images)\n",
+    "keys = jax.random.split(jax.random.key(0), number_of_images)\n",
     "\n",
     "# ... instantiate the RelionParticleDataset\n",
     "particle_parameters = make_particle_parameters(keys, instrument_config)"
@@ -178,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -200,7 +198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -211,16 +209,17 @@
     "parameter_dataset = RelionParticleParameterDataset(\n",
     "    path_to_starfile=\"./outputs/heterogeneous_relion_dataset.star\",  # starfile we created\n",
     "    path_to_relion_project=path_to_mrc_files,  # here is where the mrcs will be saved\n",
-    ")\n"
+    ")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
     "from cryojax.constants import get_tabulated_scattering_factor_parameters\n",
+    "\n",
     "\n",
     "filenames = [\"./data/groel_chainA.pdb\", \"./data/groel_chainA_holo.pdb\"]\n",
     "\n",
@@ -234,13 +233,13 @@
     "        filename, center=True, select=\"not element H\", loads_b_factors=True\n",
     "    )\n",
     "    scattering_factor_parameters = get_tabulated_scattering_factor_parameters(\n",
-    "        atom_identities \n",
+    "        atom_identities\n",
     "    )\n",
     "    atomic_potential = cxs.PengAtomicPotential(\n",
     "        atom_positions,\n",
     "        scattering_factor_a=scattering_factor_parameters[\"a\"],\n",
     "        scattering_factor_b=scattering_factor_parameters[\"b\"],\n",
-    "        b_factors=bfactors\n",
+    "        b_factors=bfactors,\n",
     "    )\n",
     "    # Convert to a real voxel grid\n",
     "    # This step is optional, you could use the atomic potential directly!\n",
@@ -261,31 +260,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
     "from typing import Any, Tuple\n",
+    "\n",
     "from jaxtyping import Array, Float\n",
+    "\n",
     "from cryojax.inference import distributions as dist\n",
     "\n",
     "\n",
     "def build_distribution_from_relion_particle_parameters(\n",
-    "    key: PRNGKeyArray,\n",
+    "    potential_id: Float[Array, \"\"],\n",
     "    relion_particle_parameters: RelionParticleParameters,\n",
     "    args: Tuple[\n",
     "        cxs.AbstractPotentialRepresentation,\n",
     "        cxs.AbstractPotentialIntegrator,\n",
-    "        Float[Array, \"\"],\n",
     "        Float,\n",
     "    ],\n",
     ") -> dist.IndependentGaussianPixels:\n",
-    "    potentials, potential_integrator, structural_weights, variance = args\n",
-    "\n",
-    "    key, subkey = jax.random.split(key)\n",
-    "    potential_id = jax.random.choice(\n",
-    "        subkey, structural_weights.shape[0], p=structural_weights\n",
-    "    )\n",
+    "    potentials, potential_integrator, variance = args\n",
     "\n",
     "    structural_ensemble = cxs.DiscreteStructuralEnsemble(\n",
     "        potentials,\n",
@@ -319,7 +314,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -328,9 +323,9 @@
     "\n",
     "@eqx.filter_jit\n",
     "@partial(eqx.filter_vmap, in_axes=(0, eqx.if_array(0), None))\n",
-    "def simulate_noiseless_images(key, particle_parameters, args):\n",
+    "def simulate_noiseless_images(potential_id, particle_parameters, args):\n",
     "    distribution = build_distribution_from_relion_particle_parameters(\n",
-    "        key, particle_parameters, args\n",
+    "        potential_id, particle_parameters, args\n",
     "    )\n",
     "    return distribution.compute_signal()\n",
     "\n",
@@ -339,6 +334,8 @@
     "def estimate_signal_variance(\n",
     "    key, n_images_for_estimation, mask_radius, instrument_config, args, *, batch_size=None\n",
     "):\n",
+    "    potentials, potential_integrator, ensemble_weights, variance = args\n",
+    "\n",
     "    key, *subkeys = jax.random.split(key, n_images_for_estimation + 1)\n",
     "    subkeys = jnp.array(subkeys)\n",
     "\n",
@@ -351,9 +348,13 @@
     "        replace_fn=lambda x: 0.0 * x,\n",
     "    )\n",
     "\n",
-    "    key, *subkeys = jax.random.split(key, n_images_for_estimation + 1)\n",
-    "    subkeys = jnp.array(subkeys)\n",
-    "    noiseless_images = simulate_noiseless_images(subkeys, particle_parameters, args)\n",
+    "    key, subkey = jax.random.split(key)\n",
+    "    potential_ids = jax.random.choice(\n",
+    "        subkey, ensemble_weights.shape[0], (n_images_for_estimation,), p=ensemble_weights\n",
+    "    )\n",
+    "    noiseless_images = simulate_noiseless_images(\n",
+    "        potential_ids, particle_parameters, (potentials, potential_integrator, variance)\n",
+    "    )\n",
     "\n",
     "    # define noise mask\n",
     "    mask = CircularCosineMask(\n",
@@ -371,7 +372,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -402,7 +403,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -411,34 +412,39 @@
     "    constant_args,\n",
     "    per_particle_args,\n",
     "):\n",
-    "    key = per_particle_args \n",
-    "    key_noise, key_structure = jax.random.split(key)\n",
+    "    key_noise, potential_id = per_particle_args\n",
     "    distribution = build_distribution_from_relion_particle_parameters(\n",
-    "        key_structure, particle_parameters, constant_args\n",
+    "        potential_id, particle_parameters, constant_args\n",
     "    )\n",
-    "    return distribution.sample(key_noise)\n"
+    "    return distribution.sample(key_noise)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "snr = 0.1  # define whatever snr you want\n",
     "noise_variance = signal_variance / snr\n",
     "\n",
-    "ensemble_weights = jnp.array([0.7, 0.3])\n",
-    "constant_args = (potentials, potential_integrator, ensemble_weights, noise_variance)\n",
+    "constant_args = (potentials, potential_integrator, noise_variance)\n",
     "\n",
-    "# Generate RNG keys for per-image noise\n",
-    "keys = jax.random.split(jax.random.PRNGKey(0), number_of_images)\n",
+    "# Generate RNG keys for per-image noise, and per-image conformations\n",
+    "keys_noise = jax.random.split(jax.random.key(0), number_of_images)\n",
+    "key_structure = jax.random.key(1)\n",
+    "\n",
+    "# Generate the per-image conformation assignments\n",
+    "ensemble_weights = jnp.array([0.3, 0.7])  # weights for sampling structures\n",
+    "potential_ids = jax.random.choice(\n",
+    "    key_structure, ensemble_weights.shape[0], (number_of_images,), p=ensemble_weights\n",
+    ")\n",
     "\n",
     "write_simulated_image_stack_from_starfile(\n",
     "    param_dataset=parameter_dataset,\n",
     "    compute_image_fn=compute_image_with_noise,\n",
     "    constant_args=constant_args,\n",
-    "    per_particle_args=keys,\n",
+    "    per_particle_args=(keys_noise, potential_ids),\n",
     "    is_jittable=True,\n",
     "    batch_size_per_mrc=10,\n",
     "    overwrite=True,\n",
@@ -457,7 +463,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -467,7 +473,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -476,7 +482,7 @@
        "cryojax.data._particle_data.ParticleStack"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -498,7 +504,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -520,7 +526,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -548,7 +554,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -592,7 +598,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -616,7 +622,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -627,16 +633,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(Array(27, dtype=int32), Array(73, dtype=int32))"
+       "(Array(65, dtype=int32), Array(35, dtype=int32))"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -662,7 +668,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -739,7 +745,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -753,7 +759,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -762,7 +768,7 @@
        "Array(True, dtype=bool)"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -782,7 +788,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -846,7 +852,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -883,17 +889,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
     "parameter_table = get_tabulated_scattering_factor_parameters(atom_identities)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -906,16 +911,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(Array(27, dtype=int32), Array(73, dtype=int32))"
+       "(Array(65, dtype=int32), Array(35, dtype=int32))"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
