--- a/docs/examples/ewald-sphere.ipynb
+++ b/docs/examples/ewald-sphere.ipynb
@@ -93,15 +93,16 @@
    "source": [
     "transfer_theory = cxs.ContrastTransferTheory(ctf, amplitude_contrast_ratio=0.1)\n",
     "\n",
-    "scattering_theory_wo_ewald = cxs.WeakPhaseScatteringTheory(\n",
+    "scattering_theory_wo_ewald = cxe.HighEnergyScatteringTheory(\n",
     "    structural_ensemble,\n",
-    "    cxs.FourierSliceExtraction(),\n",
-    "    transfer_theory,\n",
+    "    cxe.EwaldSphereExtraction(),\n",
+    "    cxe.WaveTransferTheory(ctf),\n",
+    "    amplitude_contrast_ratio=0.1,\n",
     ")\n",
     "scattering_theory_w_ewald = cxs.WeakPhaseScatteringTheory(\n",
     "    structural_ensemble,\n",
     "    cxe.EwaldSphereExtraction(),\n",
-    "    transfer_theory,\n",
+    "    cxs.ContrastTransferTheory(ctf, amplitude_contrast_ratio=0.1),\n",
     ")"
    ]
   },
