--- a/docs/examples/read-dataset.ipynb
+++ b/docs/examples/read-dataset.ipynb
@@ -403,7 +403,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "cryojax",
+   "display_name": ".venv",
    "language": "python",
    "name": "python3"
   },
@@ -417,7 +417,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.13"
+   "version": "3.11.11"
   }
  },
  "nbformat": 4,
