update ensemble tutorial

--- a/docs/examples/read-dataset.ipynb
+++ b/docs/examples/read-dataset.ipynb
@@ -403,7 +403,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv",
+   "display_name": "cryojax_project",
    "language": "python",
    "name": "python3"
   },
