--- a/docs/examples/cross-correlation-search.ipynb
+++ b/docs/examples/cross-correlation-search.ipynb
@@ -230,7 +230,7 @@
     "import jax.numpy as jnp\n",
     "\n",
     "from cryojax.image import irfftn\n",
-    "from cryojax.utils import get_filter_spec\n",
+    "from cryojax.jax_util import get_filter_spec\n",
     "\n",
     "\n",
     "# Grab an `equinox` filter specification where the CTF parameters\n",
@@ -343,7 +343,7 @@
     }
    ],
    "source": [
-    "from cryojax.inference import tree_grid_take, tree_grid_unravel_index\n",
+    "from cryojax.jax_util import tree_grid_take, tree_grid_unravel_index\n",
     "\n",
     "\n",
     "# Grab the first grid point\n",
@@ -401,7 +401,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -422,7 +422,7 @@
    "source": [
     "import math\n",
     "\n",
-    "from cryojax.inference import MinimumSearchMethod, run_grid_search, tree_grid_shape\n",
+    "from cryojax.jax_util import MinimumSearchMethod, run_grid_search, tree_grid_shape\n",
     "\n",
     "\n",
     "# Choose the search method\n",
