forgot to add files

--- a/docs/examples/cross-correlation-search.ipynb
+++ b/docs/examples/cross-correlation-search.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "This is a tutorial that demonstrates a cross-correlation-based grid search for the underlying pose of a known structure. The idea of the search follows `cisTEM`'s 2D template matching program.\n",
     "\n",
-    "This is also a tutorial for using `cryojax`'s grid search API. In `cryojax.inference`, the function `run_grid_search` provides a flexible API for minimizing a loss function with grid search, while the abstract interface `AbstractGridSearchMethod` provides a way to extend the API. See the documentation for more information.\n",
+    "This is also a tutorial for using `cryojax`'s grid search API. In `cryojax.jax_util`, the function `run_grid_search` provides a flexible API for minimizing a loss function with grid search, while the abstract interface `AbstractGridSearchMethod` provides a way to extend the API. See the documentation for more information.\n",
     "\n",
     "*Reference*:\n",
     "\n",
