--- a/docs/examples/simulating-and-reweighting-ensembles.ipynb
+++ b/docs/examples/simulating-and-reweighting-ensembles.ipynb
@@ -53,7 +53,7 @@
    "source": [
     "# CryoJAX imports\n",
     "\n",
-    "import cryojax.image.transformers as tf\n",
+    "import cryojax.image.transform as tf\n",
     "import cryojax.simulator as cxs\n",
     "from cryojax.data import (\n",
     "    RelionParticleParameterFile,\n",
