--- a/docs/examples/simulate-relion-dataset.ipynb
+++ b/docs/examples/simulate-relion-dataset.ipynb
@@ -74,7 +74,7 @@
     "    RelionParticleStackDataset,\n",
     "    simulate_particle_stack,\n",
     ")\n",
-    "from cryojax.image import transform as tf\n",
+    "from cryojax.image import transforms as tf\n",
     "from cryojax.io import read_atoms_from_pdb\n",
     "from cryojax.rotations import SO3"
    ]
